--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Library</h1>
+        <hr>
+    </header>
+    <main>
+        <button id="addBook">Add Book</button>
+        <div id="library">
+
+        </div>
+    </main>
+    <div id="modal">
+        <form id="addBookForm">
+            <h2 id="titleModalAdd">Add New Book</h2>
+            <input id="title" name="title" type="text" placeholder="Title" required>
+            <input id="author" name="author" type="text" placeholder="Author" required>
+            <input id="pages" name="pages" type="number" placeholder="Pages" required>
+            <div id="checkBox">
+                <label>Read: </label>
+                <input id="read" name="read" type="checkbox">
+            </div>
+            <button id="submit">Submit</button>
+        </form>
+    </div>
+    <div id="overlay"></div>
 </body>
 </html>
