--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <main>
         <button id="addBook">Add Book</button>
         <div id="library">
+            <div class="book">
+                <div class="bookTitle">"Game of Thrones"</div>
+                <div class="bookAuthor">George R. R. Martin</div>
+                <div class="bookPages">694 pages</div>
+                <button class="readBtn complete">Read</button>
+                <button class="deleteBtn">Delete</button>
+            </div>
 
         </div>
     </main>
@@ -29,7 +36,7 @@
                 <label>Read: </label>
                 <input id="read" name="read" type="checkbox">
             </div>
-            <button id="submit">Submit</button>
+            <button id="submitBtn" type="submit" >Submit</button>
         </form>
     </div>
     <div id="overlay"></div>
