--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
         </div>
     </main>
+
+    <footer id="footer">
+        <p id="footerText">sjofrem © 2021</p>
+        <a href="https://github.com/sjofrem"> 
+            <img id= "github" src="https://cdn-icons-png.flaticon.com/512/25/25231.png">
+        </a>
+    </footer>
+
     <div id="modal">
         <form id="addBookForm">
             <h2 id="titleModalAdd">Add New Book</h2>
